# wx-bot-sdk

./: .gitignore  Cargo.toml  README.md  deck.pptx
.github/workflows/: publish.yml
examples/: echo.rs  multi_echo.rs  qr_login.rs  send_deck.rs
src/: bot.rs  lib.rs  main.rs  monitor.rs  multi_bot.rs
src/api/: config_cache.rs  mod.rs  session_guard.rs
src/auth/: accounts.rs  login_qr.rs  mod.rs
src/cdn/: aes_ecb.rs  cdn_upload.rs  cdn_url.rs  mod.rs  pic_decrypt.rs  upload.rs
src/media/: media_download.rs  mod.rs
src/messaging/: mod.rs  process_message.rs  send.rs  send_media.rs
src/storage/: mod.rs  state_dir.rs  sync_buf.rs
src/util/: logger.rs  mod.rs  random.rs
