[package]
name = "wx-bot-sdk"
version = "0.1.0"
edition = "2024"
description = "Standalone Weixin Bot SDK in Rust"
license = "MIT"
repository = "https://github.com/1474443844/wx-bot-sdk"
homepage = "https://github.com/1474443844/wx-bot-sdk"
readme = "README.md"
keywords = ["weixin", "wechat", "bot", "sdk"]
categories = ["api-bindings", "web-programming"]

[lib]
name = "wx_bot_sdk"
path = "src/lib.rs"

[dependencies]
aes = "0.8"
base64 = "0.22"
block-padding = "0.3"
chrono = { version = "0.4", features = ["serde"] }
ecb = { version = "0.1", features = ["alloc", "block-padding"] }
hex = "0.4"
md5 = "0.7"
once_cell = "1.19"
qrcode = { version = "0.14", default-features = false }
rand = "0.8"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
tokio = { version = "1", features = ["fs", "io-util", "macros", "rt-multi-thread", "signal", "time"] }
uuid = { version = "1", features = ["v4"] }
url = "2"
